<resources>
    <string name="app_name">imtiazud-CardioBook</string>

    <string name="header">CardioBook</string>
    <string name="sub_head">Record your blood pressure and heart rate below.</string>
    <string name="ask_date">Date</string>
    <string name="date">YYYY-MM-DD</string>
    <string name="ask_time">Time</string>
    <string name="time">HH:MM</string>
    <string name="pressure_value">mm Hg</string>
    <string name="pressure">Record your pressure</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="heart_rate">Record your heart rate</string>
    <string name="hr_value">BPM</string>
    <string name="comment">Do you want to add a comment?</string>
    <string name="record_add">Add Record</string>
    <string name="submit">Submit</string>
    <string name="show_records">Show List</string>
    <string name="delete_record">Delete Record</string>
    <string name="edit_record">Edit Record</string>
    <string name="title_activity_record_list">RecordList</string>
    <string name="title_show">Show</string>
    <string name="title_record">Record</string>
    <string name="title_delete">Delete</string>
    <string name="header_record">Your Records</string>


</resources>
